Add site.webmanifest file

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bcrypt-Decoder.com - online bcrypt hash decoder</title>
+    <title>BcryptDecoder Online bcrypt hash decoder</title>
     <meta name="description"
           content="BcryptDecoder decode Bcrypt hashes into their readable parts. You can use it with a valid generated Bcrypt hash to decode the parts it is composed of.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
