--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,11 @@
           content="BcryptDecoder decode Bcrypt hashes into their readable parts. You can use it with a valid generated Bcrypt hash to decode the parts it is composed of.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta property="og:title" content="Bcrypt-Decoder.com">
-    <meta property="og:type" content="website">
     <meta property="og:url" content="https://bcrypt-decoder.com">
-    <meta property="og:image" content="">
+    <meta property="og:site_name" content="BcryptDecoder">
+    <meta property="og:title" content="Online bcrypt hash decoder">
+    <meta property="og:description" content="BcryptDecoder decode Bcrypt hashes into their readable parts. You can use it with a valid generated Bcrypt hash to decode the parts it is composed of.">
+    <meta property="og:type" content="website">
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
@@ -24,7 +25,8 @@
 <div class="page-wrapper">
     <header>
         <a href="/">
-            <h1 class="content"><strong>BcryptDecoder</strong><span class="light"> Online bcrypt hash decoder</span>
+            <h1 class="content">
+                <strong>BcryptDecoder</strong><span class="light"> Online bcrypt hash decoder</span>
             </h1>
         </a>
     </header>
@@ -64,7 +66,7 @@
 </div>
 
 <footer>
-    <p class="content">BcryptDecoder - Online bcrypt hash decoder</p>
+    <p class="content">BcryptDecoder Online bcrypt hash decoder</p>
 </footer>
 
 <script type="module" src="js/app.js"></script>
